# stream

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: build.yml
debian/: postinst  postrm  prerm  stream-cli-optimize.service
src/: lib.rs  main.rs
src/dep/: mod.rs
src/driver/: blacklist.rs  mod.rs  tui.rs
src/gpu/: config.rs  mod.rs
src/service/: mod.rs
src/stream/: mod.rs  params.rs
src/transcode/: mod.rs
tests/: integration_tests.rs
